# Robot2-MecabotX

./: .gitignore  README.md
auto_recharge_ros2/: Charger_Position.json  robot_info.yaml
drive_to_coord/: package.xml  setup.cfg  setup.py
drive_to_coord/drive_to_coord/: drive_to_coord.py
gpio_reader/: package.xml  setup.cfg  setup.py
gpio_reader/gpio_reader/: read_gpio.py
people_follower_ros2/: package.xml  setup.cfg  setup.py
people_follower_ros2/launch/: visual_follower.launch.py
people_follower_ros2/people_follower_ros2/: visualFollower.py  visualTracker.py
simple_follower_ros2/simple_follower_ros2/: visualFollower.py  visualTracker.py
turn_on_wheeltec_robot/launch/: turn_on_wheeltec_robot.launch.py
wheeltec_mic/wheeltec_mic_ros2/audio/: vvui_deno.pcm
wheeltec_path_follow/path/: wheeltec_path
wheeltec_robot_nav2/launch/: wheeltec_nav2.launch.py
wheeltec_robot_nav2/map/: WHEELTEC.pgm  WHEELTEC.yaml
