<?xml version="1.0"?>
<package format="3">
  <name>drive_to_coord</name>
  <version>0.0.1</version>
  <description>Vraagt coördinaten en stuurt de robot ernaartoe.</description>
  <maintainer email="matthijs.mondelaers@student.kuleuven.be">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

